partially working android impl